[package]
name = "submission-bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

documentation = "https://docs.rs/submission-bundler"
readme = "README.md"
description = "Bundle use and create a submission file for competitive programming."
homepage = "https://github.com/competitive-programming-helper/submission-bundler-rust"
repository = "https://github.com/competitive-programming-helper/submission-bundler-rust"
license = "MIT"
keywords = ["competitive-programming", "submission", "bundle"]
category = ["competitive-pgogramming"]


exclude = [
    "docker/",
]

[dependencies]



[workspace]
members = []
